[#12457] test(secret): Cover connector getSecrets merge paths
Add unit tests for Spark/Flink/Trino/IRC/Lance/GVFS (Java+Python), fix
Java-8 Map.of usage, null-safe IRC secret merge, and MockServer stubs.

Co-authored-by: Cursor <cursoragent@cursor.com>