@@ -20,6 +20,7 @@
 package org.apache.gravitino.flink.connector.store;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
@@ -98,11 +99,12 @@ public class GravitinoCatalogStore extends AbstractCatalogStore {
   public Optional<CatalogDescriptor> getCatalog(String catalogName) throws CatalogException {
     try {
       Catalog catalog = gravitinoCatalogManager.getGravitinoCatalogInfo(catalogName);
-      BaseCatalogFactory catalogFactory = getCatalogFactory(catalog.provider());
+      BaseCatalogFactory catalogFactory = catalogFactoryForProvider(catalog.provider());
       CatalogPropertiesConverter catalogPropertiesConverter =
           catalogFactory.catalogPropertiesConverter();
       Map<String, String> catalogProperties =
-          new HashMap<>(catalog.properties() == null ? Map.of() : catalog.properties());
+          new HashMap<>(
+              catalog.properties() == null ? Collections.emptyMap() : catalog.properties());
       catalogProperties.putAll(catalog.supportsSecrets().getSecrets());
       Map<String, String> flinkCatalogProperties =
           catalogPropertiesConverter.toFlinkCatalogProperties(catalogProperties);
@@ -154,7 +156,13 @@ public class GravitinoCatalogStore extends AbstractCatalogStore {
             catalogType));
   }
 
-  private BaseCatalogFactory getCatalogFactory(String provider) {
+  /**
+   * Resolve the Flink catalog factory for a Gravitino provider. Package-visible for unit tests.
+   *
+   * @param provider Gravitino catalog provider name
+   * @return matching {@link BaseCatalogFactory}
+   */
+  BaseCatalogFactory catalogFactoryForProvider(String provider) {
     return discoverFactories(
         catalogFactory ->
             ((BaseCatalogFactory) catalogFactory)
